unpackaged/main/default/objects/Integracion_EBS_Pagos__c/Integracion_EBS_Pagos__c.object-meta.xml
<CustomObject>
    <label>Integración EBS Pagos</label>
    <nameField>
        <displayFormat>IEBSP-{00000}</displayFormat>
        <label>Folio Integración Pago</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integraciones EBS Pagos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>