unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/ConflictId__c.field-meta.xml
<CustomField>
    <fullName>ConflictId__c</fullName>
    <label>ConflictId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>