unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/Created__c.field-meta.xml
<CustomField>
    <fullName>Created__c</fullName>
    <label>Created</label>
    <type>Date</type>
</CustomField>