unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/DbLastUpd__c.field-meta.xml
<CustomField>
    <fullName>DbLastUpd__c</fullName>
    <label>DbLastUpd</label>
    <type>Date</type>
</CustomField>