unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/DescTipoDocto__c.field-meta.xml
<CustomField>
    <fullName>DescTipoDocto__c</fullName>
    <label>DescTipoDocto</label>
    <length>150</length>
    <type>Text</type>
</CustomField>