unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/FechaDeposito__c.field-meta.xml
<CustomField>
    <fullName>FechaDeposito__c</fullName>
    <label>FechaDeposito</label>
    <type>Date</type>
</CustomField>