unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/FechaRecibo__c.field-meta.xml
<CustomField>
    <fullName>FechaRecibo__c</fullName>
    <label>FechaRecibo</label>
    <type>Date</type>
</CustomField>