unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/Id_Interface_AutoNo__c.field-meta.xml
<CustomField>
    <fullName>Id_Interface_AutoNo__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>Id Interface AutoNo</label>
    <type>AutoNumber</type>
</CustomField>