unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/IdEstadoVenta__c.field-meta.xml
<CustomField>
    <fullName>IdEstadoVenta__c</fullName>
    <label>IdEstadoVenta</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>