unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/IdInterfaceCrm__c.field-meta.xml
<CustomField>
    <fullName>IdInterfaceCrm__c</fullName>
    <label>IdInterfaceCrm</label>
    <length>30</length>
    <type>Text</type>
</CustomField>