unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/IdReciboAr__c.field-meta.xml
<CustomField>
    <fullName>IdReciboAr__c</fullName>
    <label>IdReciboAr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>