unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/IdReestructura__c.field-meta.xml
<CustomField>
    <fullName>IdReestructura__c</fullName>
    <label>IdReestructura</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>