unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/IdTipoDocto__c.field-meta.xml
<CustomField>
    <fullName>IdTipoDocto__c</fullName>
    <label>IdTipoDocto</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>