unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/ImporteRecibo__c.field-meta.xml
<CustomField>
    <fullName>ImporteRecibo__c</fullName>
    <label>ImporteRecibo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>