unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/IndAnticipo__c.field-meta.xml
<CustomField>
    <fullName>IndAnticipo__c</fullName>
    <label>IndAnticipo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>