unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/IndReversa__c.field-meta.xml
<CustomField>
    <fullName>IndReversa__c</fullName>
    <label>IndReversa</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>