unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/Metodo__c.field-meta.xml
<CustomField>
    <fullName>Metodo__c</fullName>
    <label>Metodo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>