unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/ModifecationNum__c.field-meta.xml
<CustomField>
    <fullName>ModifecationNum__c</fullName>
    <label>ModifecationNum</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>