unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/NumRecibo__c.field-meta.xml
<CustomField>
    <fullName>NumRecibo__c</fullName>
    <label>NumRecibo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>