unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/Pago_ID__c.field-meta.xml
<CustomField>
    <fullName>Pago_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pago ID</label>
    <referenceTo>Pago__c</referenceTo>
    <relationshipLabel>Integraciones EBS Pagos</relationshipLabel>
    <relationshipName>Integraciones_EBS_Pagos</relationshipName>
    <type>Lookup</type>
</CustomField>