unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/Request_CRM_hacia_EBS__c.field-meta.xml
<CustomField>
    <fullName>Request_CRM_hacia_EBS__c</fullName>
    <label>Request CRM hacia EBS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>