unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/Requisicion__c.field-meta.xml
<CustomField>
    <fullName>Requisicion__c</fullName>
    <label>Requisicion</label>
    <length>20</length>
    <type>Text</type>
</CustomField>