unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/Response_EBS_hacia_CRM__c.field-meta.xml
<CustomField>
    <fullName>Response_EBS_hacia_CRM__c</fullName>
    <label>Response EBS hacia CRM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>