unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/SesionCajaId__c.field-meta.xml
<CustomField>
    <fullName>SesionCajaId__c</fullName>
    <label>SesionCajaId</label>
    <length>15</length>
    <type>Text</type>
</CustomField>