unpackaged/main/default/objects/Integracion_EBS_Pagos__c/fields/TipoPago__c.field-meta.xml
<CustomField>
    <fullName>TipoPago__c</fullName>
    <label>TipoPago</label>
    <length>30</length>
    <type>Text</type>
</CustomField>