unpackaged/main/default/objects/Integracion_EBS_Pagos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estatus_Integracion__c</columns>
    <columns>IdClienteAr__c</columns>
    <columns>IdProcesoAr__c</columns>
    <columns>Pago_ID__c</columns>
    <columns>Id_Interface_AutoNo__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>